# fjc_judges

./: pyproject.toml
data/: fjc_career.csv  fjc_demographics.csv  fjc_names.csv  fjc_service.csv
judges/: __init__.py  fjc_create.py  fjc_match.py  instructions.py
tests/: test_judges.py
